<resources>
    <string name="app_name">AgentxProfessionalNumeral</string>
    <string name="title">Agent X</string>
    <string name="subtitle">Professional Numeral</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="difficulty">Difficulty</string>
    <string name="sound">Sound</string>
    <string name="save">Save</string>
    <string name="score">Score: %d</string>
    <string name="detection">Detection: %d%%</string>
    <string name="guess_hint">Enter value of X</string>
    <string name="disguise">Disguise!</string>
    <string name="bomb">Smoke bomb: %d</string>
    <string name="no_guess">No guess entered</string>
    <string name="spotted">They\'ve found you, get out of there!</string>
    <string name="name_hint">Enter agent codename</string>
    <string name="submit_score">Submit score</string>
    <string name="main_menu">Main menu</string>
    <string name="new_game">New game</string>
    <string name="tweet_score">Tweet score</string>
    <string name="format_tweet">%s scored %d points for their raid on an %s level base. \n#AgentXProNumeral</string>
    <string name="game_over">Game Over</string>
    <string name="score_shared">Score shared</string>
    <string name="share_failed">Unable to share</string>
    <string name="smoke_bomb">Smoke bomb</string>
    <string name="high_alert">High alert</string>
    <string name="medium_alert">Medium alert</string>
    <string name="low_alert">Low alert</string>
    <string name="scores_entry">%-50s%3d</string>
    <string name="scores_error">Error loading scores</string>
    <string name="no_codename">Enter a codename</string>
    <array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
    </array>
</resources>
