<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOverFragment">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLength="10"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit_score" />

    <Button
        android:id="@+id/tweet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tweet_score" />

    <Button
        android:id="@+id/highScores"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/high_scores" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/main_menu" />
</LinearLayout>