<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/title"
        android:textSize="70sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="50"
        android:text="@string/subtitle"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/play"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:onClick="buttonClicked"
        android:text="@string/play"
        android:textSize="20sp"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@+id/highScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/highScores"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:onClick="buttonClicked"
        android:text="@string/high_scores"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <Button
        android:id="@+id/settings"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:onClick="buttonClicked"
        android:text="@string/settings"
        android:textSize="20sp"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highScores" />

</androidx.constraintlayout.widget.ConstraintLayout>